<!--
  ~ Copyright (c) 2025. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<resources>
    <string name="app_name">twitterclone</string>
    <!-- Auth common -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="have_account_login">Already have an account? Log in</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="email_required">Email is required</string>
    <string name="email_invalid">Enter a valid email</string>
    <string name="password_required">Password is required</string>
    <string name="password_weak">Password must be at least 8 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="username_required">Username is required</string>
    <string name="username_invalid">Username can contain letters, numbers, and underscores only</string>
    <string name="progress_please_wait">Please wait…</string>
    <string name="verify_email_title">Verify your email</string>
    <string name="verify_email_message">We sent a verification link to %1$s. Please verify your email to continue.</string>
    <string name="resend_email">Resend email</string>
    <string name="i_verified">I\'ve verified</string>
    <string name="logout">Log out</string>
    <string name="welcome">Welcome</string>
    <string name="error_generic">Something went wrong. Try again.</string>
    <string name="error_wrong_credentials">Wrong email or password</string>
    <string name="error_email_not_verified">Email not verified. Please verify your email.</string>
    <string name="error_user_exists">An account with this email already exists</string>
</resources>